@startuml

package sxeval {

    note as T_Note
        Supported types for <b>T</b>:
            <i>int</i>
            <i>signed char</i>
            <i>short int</i>
            <i>long int</i>
            <i>unsigned int</i>
            <i>unsigned char</i>
            <i>unsigned long int</i>
            <i>float</i>
            <i>double</i>
            <i>long double</i>
    end note

    note as alias_Note
        Types definitions:
            <b>resolveVariable_t</b>: std::function<T&(const std::string&)>
            <b>resolveEncapsulated_t</b>: std::function<std::function<T(void)>(const std::string&)>
    end note

    class SXEval<T> {
        - Node : struct {instruct : std::unique_ptr<IInstruction<T>>, parent : Node*, subnodes : std::vector<Node>}
        -_operationsFactory : OperationsFactory<T>
        -_operations : std::vector<std::unique_ptr<AOperation<T>>>
        -_encapsulated : std::vector<EncapsulatedVariable<T>*>
        -_lastOperation : Node
        -_expression : std::string
        +SXEval()
        +template registerOperation<OP>()
        +build(expression : const std::string&, resolveVariable : const resolveVariable_t&, resolveEncapsulated : const resolveEncapsulated_t&)
        +build(expression : const std::string&, resolveEncapsulated : const resolveEncapsulated_t&, resolveVariable : const resolveVariable_t&)
        +execute() : T
        +interpret(expression : const std::string&, resolveVariable : const resolveVariable_t<T>&, resolveEncapsulated : const resolveEncapsulated_t<T>&) : T
        +interpret(expression : const std::string&, resolveEncapsulated : const resolveEncapsulated_t<T>&, resolveVariable : const resolveVariable_t<T>&) : T
        +toString() : std::string
        -_skipChars(exp : std::string&)
        -_getNextSymbol(exp : std::string&) : std::string&
        -_build(exp : std::string&, resolveVariable : const resolveVariable_t<T>&)  : Node
        -_fillParents(parent : Node&)
        -_buildTreeStr(std::opstream& os, const Node& node, size_t depth) : void
    }

    interface IInstruction<T> {
        +getResult() : T&
        +{abstract} toString() : std::string
    }

    abstract class AOperation<T> extends IInstruction {
        +{static} UNLIMITED_ARITY : constexpr const int := -1
        +{static} KEY : constexpr const char* const := "AOperation"
        +{static} ARITY_MIN : constexpr const int := 0
        +{static} ARITY_MAX : constexpr const int := UNLIMITED_ARITY
        #_args : std::vector<std::reference_wrapper<T>>
        #_result : T
        +AOperation(args : const std::vector<IInstruction<T>*>&)
        +getResult() : T&
        +{abstract} execute()
    }

    interface IOperand<T> extends IInstruction {
    }

    class Value<T> extends IOperand {
        -_val : T
        +Value(val : T)
        +getResult() : T&
        +toString() : std::string
    }

    class Variable<T> extends IOperand {
        -_var : T&
        -_name : const std::string
        +Variable(var : T&, name : const std::string&)
        +getResult() : T&
        +toString() : std::string
    }

    class EncapsulatedVariable<T> extends IOperand {
        -_var : T
        -_name : const std::string
        -_get : const std::function<T(void)>&
        +Variable(get : const std::function<T(void)>&, name : const std::string&)
        +getResult() : T&
        +retrieve()
        +toString() : std::string
    }

    package operations {

        class OperationsFactory<T> {
            -_operations : std::map<std::string, std::function<std::unique_ptr<AOperation<T>>(const std::vector<IInstruction<T>*>&)>>
            +OperationsFactory()
            +template add<OP>()
            +create(key : const std::string&, args : const std::vector<IInstruction<T>*>) : std::unique_ptr<AOperation<T>>
            +compute(key : const std::string&, args : const std::vector<IInstruction<T>*>) : T
        }

        class Addition<T> {
            +{static} KEY : constexpr const char* := "+"
            +{static} ARITY_MIN : constexpr const int := 2
            +{static} ARITY_MAX : constexpr const int := AOperation<T>::UNLIMITED_ARITY
            +Addition(args : const std::vector<IInstruction<T>*>&)
            +execute()
            +toString() : std::string
        }

        class SquareRoot<T> {
            +{static} KEY : constexpr const char* := "sqrt"
            +{static} ARITY_MIN : constexpr const int := 1
            +{static} ARITY_MAX : constexpr const int := 1
            +SquareRoot(args : const std::vector<IInstruction<T>*>&)
            +execute()
            +toString() : std::string
        }

        Addition -up-|> AOperation
        SquareRoot -up-|> AOperation

        note "The other operations are omitted for clarity." as ope_Note
        Addition .. ope_Note
        SquareRoot .. ope_Note

    }

    SXEval *--> IInstruction : Node::instruct\n0..*
    SXEval *--> OperationsFactory : _operationsFactory\n1..1
    SXEval o--> AOperation : _operations\n0..*
    SXEval o--> EncapsulatedVariable : _encapsulated\n0..*
    AOperation o-up-> IInstruction : _args\n0..*

}

@enduml
